# rustOCR

./: Cargo.toml  build_error.txt  planning.md
src/: gpio_facade.rs  image_facade.rs  lib.rs  main.rs  output_facade.rs
