[package]
name = "rust_ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.24"
config = "0.13.3"
derivative = "2.2.0"
fern = "0.6.2"
futures = "0.3.28"
leptess = "0.14.0"
log = "0.4.17"
once_cell = "1.17.1"
opencv = { version = "0.82.0", features = ["clang-runtime"] }
ordered-float = "3.7.0"
rppal = "0.14.1"
rust-ini = "0.19.0"
